tests/golden/config/fluentbit/fluentbit/00_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations: {}
  labels:
    name: syn-fluentbit
    vshn_net_solution_monitoring: solution-base-monitoring
  name: syn-fluentbit
